--- a/OrdersFood-FE/src/modules/navigation/layouts/layout-auth/layout-auth.component.html
+++ b/OrdersFood-FE/src/modules/navigation/layouts/layout-auth/layout-auth.component.html
@@ -2,5 +2,5 @@
     <div id="layoutAuthentication_content">
         <main><ng-content></ng-content></main>
     </div>
-    <div id="layoutAuthentication_footer"><sb-footer></sb-footer></div>
+    <!-- <div id="layoutAuthentication_footer"><sb-footer></sb-footer></div> -->
 </div>
