--- a/OrdersFood-FE/src/modules/navigation/layouts/layout-auth/layout-auth.component.html
+++ b/OrdersFood-FE/src/modules/navigation/layouts/layout-auth/layout-auth.component.html
@@ -1,4 +1,10 @@
-<div class="bg-primary" id="layoutAuthentication">
+<div class="bg-primary" id="layoutAuthentication" 
+[ngStyle]="{
+            'background-image': 'url(https://c8.alamy.com/comp/2ATDYY5/food-banner-vegetables-and-spices-top-view-free-copy-space-2ATDYY5.jpg)',
+            'background-position': 'center',
+            'background-repeat': 'no-repeat',
+            'background-size': 'cover'
+            }">
     <div id="layoutAuthentication_content">
         <main><ng-content></ng-content></main>
     </div>
