--- a/OrdersFood-FE/src/modules/auth/containers/login/login.component.html
+++ b/OrdersFood-FE/src/modules/auth/containers/login/login.component.html
@@ -1,5 +1,11 @@
 <sb-layout-auth>
     <div class="container">
+        <div class="alert alert-success" role="alert">
+            This is a success alert—check it out!
+        </div>
+        <div class="alert alert-danger" role="alert">
+            This is a success alert—check it out!
+        </div>
         <div class="row justify-content-center">
             <div class="col-lg-5">
                 <div class="card shadow-lg border-0 rounded-lg mt-5">
@@ -9,10 +15,10 @@
                     <div class="card-body">
                         <form [formGroup]="formLogin">
                             <div class="form-group"><label class="small mb-1"
-                                    for="inputEmailAddress">Email</label><input class="form-control py-4" formControlName="username"
+                                    for="inputEmailAddress">Email</label><input class="form-control py-4" formControlName="username" value="anhtm"
                                     id="inputEmailAddress" type="email" placeholder="Enter email address" /></div>
                             <div class="form-group"><label class="small mb-1" for="inputPassword">Password</label><input
-                                    class="form-control py-4" id="inputPassword" type="password" formControlName="password"
+                                    class="form-control py-4" id="inputPassword" type="password" formControlName="password" value="root"
                                     placeholder="Enter password" /></div>
                             <div class="form-group">
                                 <div class="custom-control custom-checkbox"><input class="custom-control-input"
