--- a/OrdersFood-FE/src/modules/tables/components/ng-bootstrap-table/ng-bootstrap-table.component.html
+++ b/OrdersFood-FE/src/modules/tables/components/ng-bootstrap-table/ng-bootstrap-table.component.html
@@ -15,6 +15,7 @@
                 <th scope="col" sbSortable="population" (sort)="onSort($event)"><span>Population</span>
                     <sb-sort-icon *ngIf='sortedColumn === "population"' [direction]="sortedDirection"></sb-sort-icon>
                 </th>
+                <th scope="col">Action</th>
             </tr>
         </thead>
         <tbody>
@@ -41,8 +42,15 @@
                     <ngb-highlight [result]="data.email" [term]="countryService.searchTerm"></ngb-highlight>
                 </td>
                 <td>
-                    <ngb-highlight [result]="data.phone" [term]="countryService.searchTerm">
-                    </ngb-highlight>
+                    <ngb-highlight [result]="data.phone" [term]="countryService.searchTerm"></ngb-highlight>
+                </td>
+                <td>
+                    <button (click)="outActionID(data.id, 'edit')" [ngStyle]="{'border': 'none', 'background-color': 'transparent'}">
+                        <fa-icon class="mr-1 text-primary" [icon]='["fas", "highlighter"]'></fa-icon>
+                    </button>
+                    <button (click)="outActionID(data.id, 'delete')" [ngStyle]="{'border': 'none', 'background-color': 'transparent'}">
+                        <fa-icon class="mr-1 text-danger mx-3" [icon]='["fas", "trash"]'></fa-icon>
+                    </button>
                 </td>
             </tr>
         </tbody>
