--- a/OrdersFood-FE/src/modules/user/containers/create-user/create-user.component.html
+++ b/OrdersFood-FE/src/modules/user/containers/create-user/create-user.component.html
@@ -1,1 +1,50 @@
-<p>create-user works!</p>
+<sb-layout-dashboard>
+    <sb-dashboard-head title="Create User" [hideBreadcrumbs]="false"></sb-dashboard-head>
+    <!-- <sb-card>
+        <div class="card-body">The table below is adapted from ng-bootsrap. For more information, please visit the <a
+                target="_blank" href="https://ng-bootstrap.github.io/#/components/table/overview">ng-bootstrap table
+                documentation</a>.</div>
+    </sb-card> -->
+
+    <form>
+        <div class="form-row">
+            <div class="form-group col-md-4">
+                <label for="name">name</label>
+                <input type="text" class="form-control" id="name" placeholder="Nguyen Van Hung">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="inputEmail4">Email</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="JoinSon@gmail.com">
+            </div>
+            
+            <div class="form-group col-md-4">
+                <label for="phone">Phone</label>
+                <input type="text" class="form-control" id="phone" placeholder="0905746249">
+            </div>
+        </div>
+
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="username">User name</label>
+                <input type="text" class="form-control" id="username" placeholder="joinson">
+            </div>
+            <!-- <div class="form-group col-md-4">
+                <label for="inputState">State</label>
+                <select id="inputState" class="form-control">
+                    <option selected>Choose...</option>
+                    <option>...</option>
+                </select>
+            </div> -->
+            <div class="form-group col-md-6">
+                <label for="inputPassword4">Password</label>
+                <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputAddress">Address</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+        </div>
+        <button type="submit" class="btn btn-primary">Create</button>
+    </form>
+</sb-layout-dashboard>
