--- a/OrdersFood-FE/src/modules/user/containers/create-user/create-user.component.html
+++ b/OrdersFood-FE/src/modules/user/containers/create-user/create-user.component.html
@@ -9,25 +9,41 @@
     <form>
         <div class="form-row">
             <div class="form-group col-md-4">
-                <label for="name">name</label>
-                <input type="text" class="form-control" id="name" placeholder="Nguyen Van Hung">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" placeholder="Nguyen Van Hung" name="name" [(ngModel)] = 'user.name' value="123" />
             </div>
+            {{user.name}}
             <div class="form-group col-md-4">
                 <label for="inputEmail4">Email</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder="JoinSon@gmail.com">
+                <input type="email" class="form-control" id="inputEmail4" placeholder="JoinSon@gmail.com" name="email" [(ngModel)] = 'user.email'>
             </div>
             
             <div class="form-group col-md-4">
                 <label for="phone">Phone</label>
-                <input type="text" class="form-control" id="phone" placeholder="0905746249">
+                <input type="text" class="form-control" id="phone" placeholder="0905746249" name="phone" [(ngModel)] = 'user.phone'>
             </div>
         </div>
 
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="username">User name</label>
-                <input type="text" class="form-control" id="username" placeholder="joinson">
+                <input type="text" class="form-control" id="username" placeholder="joinson" name="username" [(ngModel)] = 'user.username'>
             </div>
+
+            <div class="form-group col-md-6">
+                <label for="inputPassword4">Password</label>
+                <input type="password" class="form-control" id="inputPassword4" placeholder="Password" name="password" [(ngModel)] = 'user.password'>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputAddress">Address</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" name="address" [(ngModel)] = 'user.address'>
+        </div>
+        <button type="submit" class="btn btn-primary">Create</button>
+    </form>
+</sb-layout-dashboard>
+
             <!-- <div class="form-group col-md-4">
                 <label for="inputState">State</label>
                 <select id="inputState" class="form-control">
@@ -35,16 +51,3 @@
                     <option>...</option>
                 </select>
             </div> -->
-            <div class="form-group col-md-6">
-                <label for="inputPassword4">Password</label>
-                <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="inputAddress">Address</label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-        </div>
-        <button type="submit" class="btn btn-primary">Create</button>
-    </form>
-</sb-layout-dashboard>
