--- a/OrdersFood-FE/src/modules/user/containers/create-user/create-user.component.html
+++ b/OrdersFood-FE/src/modules/user/containers/create-user/create-user.component.html
@@ -1,5 +1,5 @@
 <sb-layout-dashboard>
-    <sb-dashboard-head title="Create User" [hideBreadcrumbs]="false"></sb-dashboard-head>
+    <sb-dashboard-head title={{title}} [hideBreadcrumbs]="false"></sb-dashboard-head>
     <!-- <sb-card>
         <div class="card-body">The table below is adapted from ng-bootsrap. For more information, please visit the <a
                 target="_blank" href="https://ng-bootstrap.github.io/#/components/table/overview">ng-bootstrap table
@@ -10,9 +10,8 @@
         <div class="form-row">
             <div class="form-group col-md-4">
                 <label for="name">Name</label>
-                <input type="text" class="form-control" id="name" placeholder="Nguyen Van Hung" name="name" [(ngModel)] = 'user.name' value="123" />
+                <input type="text" class="form-control" id="name" placeholder="Nguyen Van Hung" name="name" [(ngModel)] = 'user.name'/>
             </div>
-            {{user.name}}
             <div class="form-group col-md-4">
                 <label for="inputEmail4">Email</label>
                 <input type="email" class="form-control" id="inputEmail4" placeholder="JoinSon@gmail.com" name="email" [(ngModel)] = 'user.email'>
@@ -40,7 +39,8 @@
             <label for="inputAddress">Address</label>
             <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" name="address" [(ngModel)] = 'user.address'>
         </div>
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button *ngIf="!id" (click)="onSubmit()" type="submit" class="btn btn-primary">Create</button>
+        <button *ngIf="id" (click)="onSubmit()" type="submit" class="btn btn-success">Update</button>
     </form>
 </sb-layout-dashboard>
 
