sort search filter table

--- a/OrdersFood-FE/src/modules/tables/components/ng-bootstrap-table/ng-bootstrap-table.component.html
+++ b/OrdersFood-FE/src/modules/tables/components/ng-bootstrap-table/ng-bootstrap-table.component.html
@@ -6,49 +6,37 @@
         <thead>
             <tr>
                 <th scope="col">#</th>
-                <th scope="col" sbSortable="name" (sort)="onSort($event)"><span>Country</span>
+                <th scope="col" sbSortable="name" (sort)="onSort($event)"><span>Name</span>
                     <sb-sort-icon *ngIf='sortedColumn === "name"' [direction]="sortedDirection"></sb-sort-icon>
                 </th>
-                <th scope="col" sbSortable="area" (sort)="onSort($event)"><span>Area</span>
-                    <sb-sort-icon *ngIf='sortedColumn === "area"' [direction]="sortedDirection"></sb-sort-icon>
+                <th scope="col" sbSortable="email" (sort)="onSort($event)"><span>Email</span>
+                    <sb-sort-icon *ngIf='sortedColumn === "email"' [direction]="sortedDirection"></sb-sort-icon>
                 </th>
-                <th scope="col" sbSortable="population" (sort)="onSort($event)"><span>Population</span>
-                    <sb-sort-icon *ngIf='sortedColumn === "population"' [direction]="sortedDirection"></sb-sort-icon>
+                <th scope="col" sbSortable="phone" (sort)="onSort($event)"><span>Phone</span>
+                    <sb-sort-icon *ngIf='sortedColumn === "phone"' [direction]="sortedDirection"></sb-sort-icon>
                 </th>
                 <th scope="col">Action</th>
             </tr>
         </thead>
         <tbody>
-            <!-- <tr *ngFor="let country of countries$ | async">
+            <tr *ngFor="let country of countries$ | async">
                 <th scope="row">{{ country.id }}</th>
-                <td><img class="mr-2" [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag"
-                        style="width: 20px" />
+                <td>
+                    <!-- <img class="mr-2" [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag"
+                        style="width: 20px" /> -->
                     <ngb-highlight [result]="country.name" [term]="countryService.searchTerm"></ngb-highlight>
                 </td>
                 <td>
-                    <ngb-highlight [result]="country.area | number" [term]="countryService.searchTerm"></ngb-highlight>
+                    <ngb-highlight [result]="country.email" [term]="countryService.searchTerm"></ngb-highlight>
                 </td>
                 <td>
-                    <ngb-highlight [result]="country.population | number" [term]="countryService.searchTerm">
-                    </ngb-highlight>
-                </td>
-            </tr> -->
-            <tr *ngFor="let data of dataTable">
-                <th scope="row">{{ data.id }}</th>
-                <td>
-                    <ngb-highlight [result]="data.name" [term]="countryService.searchTerm"></ngb-highlight>
+                    <ngb-highlight [result]="country.phone" [term]="countryService.searchTerm"></ngb-highlight>
                 </td>
                 <td>
-                    <ngb-highlight [result]="data.email" [term]="countryService.searchTerm"></ngb-highlight>
-                </td>
-                <td>
-                    <ngb-highlight [result]="data.phone" [term]="countryService.searchTerm"></ngb-highlight>
-                </td>
-                <td>
-                    <button (click)="outActionID(data.id, 'edit')" [ngStyle]="{'border': 'none', 'background-color': 'transparent'}">
+                    <button (click)="outActionID(country.id, 'edit')" [ngStyle]="{'border': 'none', 'background-color': 'transparent'}">
                         <fa-icon class="mr-1 text-primary" [icon]='["fas", "highlighter"]'></fa-icon>
                     </button>
-                    <button (click)="outActionID(data.id, 'delete')" [ngStyle]="{'border': 'none', 'background-color': 'transparent'}">
+                    <button (click)="outActionID(country.id, 'delete')" [ngStyle]="{'border': 'none', 'background-color': 'transparent'}">
                         <fa-icon class="mr-1 text-danger mx-3" [icon]='["fas", "trash"]'></fa-icon>
                     </button>
                 </td>
@@ -57,11 +45,11 @@
     </table>
     <div class="d-flex justify-content-between p-2">
         <ngb-pagination [collectionSize]="total$ | async" [(page)]="countryService.page"
-            [pageSize]="countryService.pageSize"></ngb-pagination><select class="custom-select" style="width: auto"
-            name="pageSize" [(ngModel)]="countryService.pageSize">
-            <option [ngValue]="2">2 items per page</option>
-            <option [ngValue]="4">4 items per page</option>
-            <option [ngValue]="6">6 items per page</option>
-        </select>
+            [pageSize]="countryService.pageSize"></ngb-pagination>
+            <select class="custom-select" style="width: auto" name="pageSize" [(ngModel)]="countryService.pageSize">
+                <option [ngValue]="2">2 items per page</option>
+                <option [ngValue]="4">4 items per page</option>
+                <option [ngValue]="6">6 items per page</option>
+            </select>
     </div>
 </form>
