--- a/OrdersFood-FE/src/modules/auth/containers/login/login.component.html
+++ b/OrdersFood-FE/src/modules/auth/containers/login/login.component.html
@@ -9,10 +9,10 @@
                     <div class="card-body">
                         <form [formGroup]="formLogin">
                             <div class="form-group"><label class="small mb-1"
-                                    for="inputEmailAddress">Email</label><input class="form-control py-4" formControlName="username" value="anhtm"
+                                    for="inputEmailAddress">Email</label><input class="form-control py-4" formControlName="username"
                                     id="inputEmailAddress" type="email" placeholder="Enter email address" /></div>
                             <div class="form-group"><label class="small mb-1" for="inputPassword">Password</label><input
-                                    class="form-control py-4" id="inputPassword" type="password" formControlName="password" value="root"
+                                    class="form-control py-4" id="inputPassword" type="password" formControlName="password"
                                     placeholder="Enter password" /></div>
                             <div class="form-group">
                                 <div class="custom-control custom-checkbox"><input class="custom-control-input"
